navbar collapse mobile, toast and cart fixes

--- a/frontend/src/styles/navbar/cartIcon.css
+++ b/frontend/src/styles/navbar/cartIcon.css
@@ -11,12 +11,13 @@
   background-color: red;
   color: white;
   border-radius: 50%;
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.7em;
+  height: 1.7em;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.75em;
+  font-size: 0.8em;
+  font-weight: 600;
 }
 
 .cart-icon {
